Member XMLs are now integrated with the normal XML pipeline. Some cleanup of the XML pipeline.